--- a/2.md
+++ b/2.md
@@ -165,7 +165,7 @@ curl \
 ```
 kita juga mendapatkan hasil yang sama pada aplikasi ketiga
 
-### logout (TBD)
+### logout
 sekrang kita akan mencoba untuk logout dari semua aplikasi menggunakan aplikasi pertama, untuk logout ini menggunakan
 library [Rest Framework Simple JWT blacklist](https://django-rest-framework-simplejwt.readthedocs.io/en/latest/blacklist_app.html)
 yang sudah tersedia pada Library [Rest Framework Simple JWT](https://django-rest-framework-simplejwt.readthedocs.io/en/latest)
